WOrking and Play branded

--- a/public/web/css/main.css
+++ b/public/web/css/main.css
@@ -30,7 +30,7 @@
   margin: 0px;
   padding: 0px;
   margin-bottom: 0px;
-  border-bottom: 4px solid red; /* dd4a22, d22000, b04420 */
+  border-bottom: 4px solid #00aeef; /* dd4a22, d22000, b04420 */
 }
 
 #banner .broadcast {
@@ -54,18 +54,17 @@
 
 .btn-custom {
   -webkit-font-smoothing: antialiased;
-  background-color: #dd4a22!important;
+  background-color: #00aeef;
   background-repeat: repeat-x;
   background-image: none;
-  color: #fff!important;
-  border-color: #b04420 #b04420 hsl(15,69%,41%);
+  color: #fff;
+  border-color: #0486be #0486be #0486be;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.00);
   font-weight: bold;
   font-size: 20px;
 }
 .btn-custom:hover {
-  background-color: #d22000 !important;
-  text-shadow: 1px 1px 0 #740500;
+  background-color: #02739d;
 }
 
 
@@ -230,7 +229,7 @@ div.private{font-size: 18px; line-height: 18px; margin-top: 20px;}
 #primaryTabs {
   background: transparent;
   border: none;
-  font-family: georgia;
+  font-family: Montserrat, sans-sans-serif;
 }
 #primaryTabs .ui-widget-header {
   background: transparent;
