--- a/templates/colonel/header.mustache
+++ b/templates/colonel/header.mustache
@@ -85,8 +85,9 @@
       }
       #logo {
         background-image: url('/img/logo-36.png');
+        background-repeat: no-repeat;
         display: inline-block;
-        width: 36px;
+        width: 69px;
         height: 36px;
       }
       .masthead .nav {
@@ -147,4 +148,3 @@
     <a href="http://www.youtube.com/watch?v=1V6T0lJc3dU" title="Release {{ot_version}}" tabIndex="-1" class="release">&nbsp;</a>
     <a href="/"><h3 id="logo"></h3></a>
   </div>
-
