--- a/templates/web/header.mustache
+++ b/templates/web/header.mustache
@@ -16,6 +16,10 @@
   <meta name="description" content="{{description}}">
   <meta name="keywords" content="{{keywords}}">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap"
+  />
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <style type="text/css">
     body {
@@ -75,8 +79,9 @@
     }
     #logo {
       background-image: url('/img/logo-48.png');
+      background-repeat: no-repeat;
       display: inline-block;
-      width: 48px;
+      width: 91px;
       height: 48px;
     }
     @media (min-width: 481px) {
@@ -91,8 +96,9 @@
       }
       #logo {
         background-image: url('/img/logo-36.png');
+        background-repeat: no-repeat;
         display: inline-block;
-        width: 36px;
+        width: 69px;
         height: 36px;
       }
       .masthead .nav {
