--- a/templates/colonel/header.mustache
+++ b/templates/colonel/header.mustache
@@ -15,12 +15,24 @@
   <meta name="description" content="{{description}}">
   <meta name="keywords" content="{{keywords}}">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-58871470-7');
+  </script>
+
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap"
+  />
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <style type="text/css">
     body {
       padding-top: 0px;
       padding-bottom: 10px;
-      font-family: georgia,serif;
+      font-family: Montserrat,sans-serif;
     }
     /* Custom container */
     .container-narrow {
