--- a/templates/web/header.mustache
+++ b/templates/web/header.mustache
@@ -16,6 +16,20 @@
   <meta name="description" content="{{description}}">
   <meta name="keywords" content="{{keywords}}">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58871470-7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-58871470-7');
+  </script>
+
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap"
+  />
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap"
@@ -25,7 +39,7 @@
     body {
       padding-top: 0px;
       padding-bottom: 10px;
-      font-family: georgia,serif;
+      font-family: Montserrat,sans-serif;
     }
     /* Custom container */
     .container-narrow {
