--- a/public/web/css/main.css
+++ b/public/web/css/main.css
@@ -30,7 +30,7 @@
   margin: 0px;
   padding: 0px;
   margin-bottom: 0px;
-  border-bottom: 4px solid #00aeef; /* dd4a22, d22000, b04420 */
+  border-bottom: 4px solid #5240FF; /* dd4a22, d22000, b04420 */
 }
 
 #banner .broadcast {
@@ -54,17 +54,17 @@
 
 .btn-custom {
   -webkit-font-smoothing: antialiased;
-  background-color: #00aeef;
+  background-color: #5240FF;
   background-repeat: repeat-x;
   background-image: none;
   color: #fff;
-  border-color: #0486be #0486be #0486be;
+  border-color: #231CA3 #231CA3 #231CA3;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.00);
   font-weight: bold;
   font-size: 20px;
 }
 .btn-custom:hover {
-  background-color: #02739d;
+  background-color: #231CA3;
 }
 
 
