Update hundo branding

--- a/public/web/css/main.css
+++ b/public/web/css/main.css
@@ -7,7 +7,7 @@
 
 
 .masthead .nav a {
-  color: black;
+  color: #ffffff;
   text-decoration: underline;
 }
 .masthead .nav a.home {
@@ -26,11 +26,11 @@
 
 #banner {
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: #000000;
   margin: 0px;
   padding: 0px;
   margin-bottom: 0px;
-  border-bottom: 4px solid #5240FF; /* dd4a22, d22000, b04420 */
+  border-bottom: 4px solid #10DFC7; /* dd4a22, d22000, b04420 */
 }
 
 #banner .broadcast {
@@ -48,24 +48,24 @@
 }
 
 #createSecret textarea, #createSecret input {
-  background-color: #f9f9f9;
+  background-color: #000000;
   padding: 6px;
 }
 
 .btn-custom {
   -webkit-font-smoothing: antialiased;
-  background-color: #5240FF;
+  background-color: #10DFC7;
   background-repeat: repeat-x;
   background-image: none;
-  color: #fff;
-  border-color: #231CA3 #231CA3 #231CA3;
+  color: #000000;
+  border-color: #F877E0 #F877E0 #F877E0;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.00);
   font-weight: bold;
   font-size: 20px;
 }
 .btn-custom:hover {
-  background-color: #231CA3;
-  color: #fff;
+  background-color: #F877E0;
+  color: #000000;
 }
 
 
@@ -81,7 +81,7 @@
 }
 
 #footer a {
-  color: #000;
+  color: #ffffff;
 }
 
 #footer p {
