--- a/public/web/css/main.css
+++ b/public/web/css/main.css
@@ -7,7 +7,7 @@
 
 
 .masthead .nav a {
-  color: #ffffff;
+  color: black;
   text-decoration: underline;
 }
 .masthead .nav a.home {
@@ -26,7 +26,7 @@
 
 #banner {
   width: 100%;
-  background-color: #000000;
+  background-color: #f0f0f0;
   margin: 0px;
   padding: 0px;
   margin-bottom: 0px;
@@ -48,7 +48,7 @@
 }
 
 #createSecret textarea, #createSecret input {
-  background-color: #000000;
+  background-color: #f9f9f9;
   padding: 6px;
 }
 
@@ -57,7 +57,7 @@
   background-color: #10DFC7;
   background-repeat: repeat-x;
   background-image: none;
-  color: #000000;
+  color: #fff;
   border-color: #F877E0 #F877E0 #F877E0;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.00);
   font-weight: bold;
@@ -65,7 +65,7 @@
 }
 .btn-custom:hover {
   background-color: #F877E0;
-  color: #000000;
+  color: #fff;
 }
 
 
@@ -81,7 +81,7 @@
 }
 
 #footer a {
-  color: #ffffff;
+  color: #000;
 }
 
 #footer p {
@@ -159,7 +159,7 @@ div.private{font-size: 18px; line-height: 18px; margin-top: 20px;}
 .shared .secret input, .shared .secret textarea {
   border: 8px solid #eee; font-size: 14px; line-height: 14px; background-color: #fafafa; color: #000; -padding: 10px; width: 100%; margin-top: 20px
 }
-.uri input {width: 620px; font-size: 16px; line-height: 16px; padding: 6px; border: 0px; background-color: #ff0;}
+.uri input {width: 620px; font-size: 16px; line-height: 16px; padding: 6px; border: 0px; background-color: #FCFC45;}
 .uri input.private {background-color: #eee;}
 .uri p {padding: 6px; font-size: 80%; margin: 0px; color: #999;}
 .passphrase { margin-bottom: 30px; }
@@ -203,14 +203,14 @@ div.private{font-size: 18px; line-height: 18px; margin-top: 20px;}
   padding-right: 8px;
 }
 
-.hilite {background:#ff0;}
-.hilite2 {background:#6ff;}
+.hilite {background:#FCFC45;}
+.hilite2 {background:#10DFC7;}
 
 
 .err, .msg { font-weight: bold; padding: 8px; line-height: 32px; width: 100%; }
-.err { background-color: red; color: #fff }
-.msg { background-color: #ff0; }
-.warning-text { color: red;}
+.err { background-color: #F877E0; color: #fff }
+.msg { background-color: #FCFC45; }
+.warning-text { color: #F877E0;}
 
 .lightest {
   color: #ccc;
